--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -6,13 +6,13 @@ html, body, code {
 	font-family: 'Inconsolata', monospace;
 }
 a {
-	@apply .text-teal-500;
+	@apply text-cyan-500;
 }
 a:hover {
 	text-decoration: underline;
 }
 code {
-	@apply .text-red-500;
+	@apply text-red-500;
 	background: #eee;
 	padding: 0 5px;
 	border-radius: 2px;
@@ -21,12 +21,12 @@ code {
 	padding: 0.5rem 0;
 }
 #post h2 {
-	@apply .text-red-500;
+	@apply text-red-500;
 	font-size: 1.5rem;
 	margin: 1rem 0;
 }
 #post h2:before {
-	@apply .text-gray-300;
+	@apply text-gray-300;
 	content: '#';
 	margin-right: 5px;
 }
