--- a/css/app.css
+++ b/css/app.css
@@ -567,19 +567,19 @@ video {
   --tw-ring-shadow: 0 0 #0000;
 }
 
-.text-gray-600 {
+.text-gray-500 {
   --tw-text-opacity: 1;
-  color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgba(239, 68, 68, var(--tw-text-opacity));
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
 
 .text-cyan-500 {
   --tw-text-opacity: 1;
   color: rgba(6, 182, 212, var(--tw-text-opacity));
+}
+
+.text-cyan-600 {
+  --tw-text-opacity: 1;
+  color: rgba(8, 145, 178, var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -687,9 +687,9 @@ code {
 
 #post h2 {
   --tw-text-opacity: 1;
-  color: rgba(239, 68, 68, var(--tw-text-opacity));
+  color: rgba(6, 182, 212, var(--tw-text-opacity));
   font-size: 1.5rem;
-  margin: 1rem 0;
+  margin-top: 0.5rem;
 }
 
 #post h2:before {
