--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -18,15 +18,18 @@ code {
 	border-radius: 2px;
 }
 #post p {
-	padding: 0.5rem 0;
+	margin-bottom: 2rem;
 }
 #post h2 {
 	@apply text-cyan-500;
 	font-size: 1.5rem;
-	margin-top: 0.5rem;
+	margin-bottom: 0.75rem;
 }
 #post h2:before {
 	@apply text-gray-300;
 	content: '#';
 	margin-right: 5px;
+}
+#post ul {
+	margin-bottom: 0.5rem;
 }
