--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -18,7 +18,7 @@ code {
 	border-radius: 2px;
 }
 #post p {
-	margin-bottom: 2rem;
+	margin: 1.5rem 0;
 }
 #post h2 {
 	@apply text-cyan-500;
@@ -31,5 +31,9 @@ code {
 	margin-right: 5px;
 }
 #post ul {
-	margin-bottom: 0.5rem;
+	margin: 0.5rem 0;
+}
+#post ul li:before {
+	content: '-';
+	@apply mx-3;
 }
