--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -40,6 +40,9 @@ code:not([class]) {
 #post blockquote {
 	@apply pl-5 border-l-2 border-gray-500 italic;
 }
+#post strong {
+    @apply font-bold;
+}
 #post .hljs {
 	@apply p-5;
 }
