--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,16 @@
 body {
     margin-left: calc(100vw - 100%);
 }
+
 a {
-    color: rgba(244,63,94)
+    color: rgba(244, 63, 94)
 }
+
 a:hover {
     text-decoration: underline;
+}
+
+.tag {
+    @apply bg-gray-50 rounded px-2 py-0.5 cursor-pointer;
+    --at-apply: "hover:bg-gray-100";
 }
