--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,10 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto Mono', monospace;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 100vh;
 }
 
 h1 {
@@ -59,17 +63,32 @@ img {
     max-width: 100%;
     height: auto;
 }
-
+header {
+    width : 100%;
+    padding: 1.5rem 0 !important;
+}
+footer {
+    border-top: 1px solid #eaeaea;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 0 !important;
+    width: 100%;
+    font-size: 0.875rem;
+}
 #app {
     padding: 1rem 0;
 }
-
+.w-full {
+    width: 100%;
+}
+.h-full {
+    height: 100%;
+}
 .container {
     max-width: 696px;
     margin: 0 auto;
     padding: 0 1rem;
 }
-
 .main-menu {
     display: flex;
     gap: 1rem;
