--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Jost', monospace;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -41,7 +41,7 @@ pre {
         border-radius: 0.5rem;
         overflow-x: auto;
         font-size: 1rem;
-        font-family: 'Fira Code', monospace;
+        font-family: monospace;
     }
 }
 
