--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 html {
+    font-size: 18px;
     margin-left: calc(100vw - 100%); /* don't delete this, you gonna thank me later */
 }
 
@@ -33,6 +34,10 @@ a:hover {
     text-decoration: underline;
 }
 
+code {
+    font-size: 0.875rem;
+    font-family: monospace;
+}
 pre {
     code {
         display: block;
@@ -40,8 +45,6 @@ pre {
         background-color: #f4f4f4;
         border-radius: 0.5rem;
         overflow-x: auto;
-        font-size: 1rem;
-        font-family: monospace;
     }
 }
 
