--- a/public/style.css
+++ b/public/style.css
@@ -42,7 +42,7 @@ pre {
     code {
         display: block;
         padding: 1rem;
-        background-color: #f4f4f4;
+        background-color: teal;
         border-radius: 0.5rem;
         overflow-x: auto;
     }
@@ -50,7 +50,7 @@ pre {
 
 p {
     code {
-        background-color: #f4f4f4;
+        background-color: teal;
         padding: 2px 6px;
         border-radius: 0.25rem;
         font-size: 0.875rem;
