--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,13 @@
+* {
+    box-sizing: inherit;
+}
+
 html {
     font-size: 18px;
     margin-left: calc(100vw - 100%); /* don't delete this, you gonna thank me later */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
