--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Jost', monospace;
+    font-family: 'Jost', 'Roboto Mono', monospace;
     width: 100%;
     background-color: #f9f9f9;
     overflow-x: hidden;
