--- a/public/style.css
+++ b/public/style.css
@@ -51,6 +51,7 @@ pre {
         background-color: #f4f4f4;
         border-radius: 0.5rem;
         overflow-x: auto;
+        line-height: 1.5rem;
     }
 }
 
