--- a/public/style.css
+++ b/public/style.css
@@ -1,222 +1,217 @@
 * {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 html {
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Jost', 'Roboto Mono', monospace;
-    width: 100%;
-    background-color: #f9f9f9;
-    overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto Mono", monospace;
+  width: 100%;
+  background-color: #f9f9f9;
+  overflow-x: hidden;
 }
 
 h1 {
-    color: teal;
-    margin: 2rem 0 .75rem;
+  color: teal;
+  margin: 2rem 0 0.75rem;
 }
 
 h2 {
-    margin: 1.75em 0 .5em;
+  margin: 1.75em 0 0.5em;
 }
 
 h3 {
-    margin: 1.5em 0 .25em;
+  margin: 1.5em 0 0.25em;
 }
 
 a {
-    text-decoration: none;
-    color: teal;
+  text-decoration: none;
+  color: teal;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 code {
-    font-size: 0.875rem;
-    font-family: monospace;
+  font-family: monospace;
 }
 pre {
-    code {
-        display: block;
-        padding: 1rem;
-        background-color: #f4f4f4;
-        border-radius: 0.5rem;
-        overflow-x: auto;
-        line-height: 1.5rem;
-    }
+  code {
+    display: block;
+    padding: 1rem;
+    background-color: #f4f4f4;
+    border-radius: 0.5rem;
+    overflow-x: auto;
+    line-height: 1.5rem;
+  }
+}
+
+code {
+  background-color: #f4f4f4;
+  padding: 2px 6px;
+  border-radius: 0.25rem;
+  color: teal;
 }
 
 p {
-    code {
-        background-color: #f4f4f4;
-        padding: 2px 6px;
-        border-radius: 0.25rem;
-        font-size: 0.875rem;
-        color: teal;
-    }
-}
-
-p {
-    line-height: 1.75rem;
+  line-height: 1.75rem;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 header {
-    width : 100%;
-    padding: 1.5rem 0;
+  width: 100%;
+  padding: 1.5rem 0;
 }
 footer {
-    border-top: 1px solid #eaeaea;
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem 0 !important;
-    width: 100%;
-    font-size: 0.875rem;
+  border-top: 1px solid #eaeaea;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 0 !important;
+  width: 100%;
+  font-size: 0.875rem;
 }
 time {
-    color: #666;
+  color: #666;
 }
 #app {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    padding: 0 0.5rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 0 0.5rem;
 }
 .w-full {
-    width: 100%;
+  width: 100%;
 }
 .h-full {
-    height: 100%;
+  height: 100%;
 }
 .container {
-    width: 100%;
-    max-width: 696px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 696px;
+  margin: 0 auto;
 }
 .main-menu {
-    display: flex;
-    gap: 2rem;
-    font-weight: 400;
+  display: flex;
+  gap: 2rem;
+  font-weight: 400;
 
-    a {
-        color: initial;
-    }
+  a {
+    color: initial;
+  }
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .flex-center {
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .flex-column {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .block {
-    display: block;
+  display: block;
 }
 .text-sm {
-    font-size: 0.875rem;
+  font-size: 0.875rem;
 }
 .text-lg {
-    font-size: 1.125rem;
+  font-size: 1.125rem;
 }
 
 .prose {
-    img {
-        margin-top: 1rem;
-        border-radius: 1rem;
-        box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
-    }
+  img {
+    margin-top: 1rem;
+    border-radius: 1rem;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .tag {
-    font-size: 0.75rem;
-    color: #666;
-    background: #eee;
-    background-opacity: 0.5;
-    padding: 1px 8px;
-    border-radius: 0.25rem;
+  font-size: 0.75rem;
+  color: #666;
+  background: #eee;
+  background-opacity: 0.5;
+  padding: 1px 8px;
+  border-radius: 0.25rem;
 
-    &:hover {
-        background: #ddd;
-    }
+  &:hover {
+    background: #ddd;
+  }
 }
-
 
 /* Highlight */
 .hl-keyword {
-    color: #4F95D1;
+  color: #4f95d1;
 }
 
 .hl-property {
-    color: #46b98d;
+  color: #46b98d;
 }
 
 .hl-attribute {
-    font-style: italic;
+  font-style: italic;
 }
 
 .hl-type {
-    color: #D14F57;
+  color: #d14f57;
 }
 
 .hl-generic {
-    color: #9D3AF6;
+  color: #9d3af6;
 }
 
 .hl-value {
-    color: #000;
+  color: #000;
 }
 
 .hl-variable {
-    color: #000;
+  color: #000;
 }
 
 .hl-comment {
-    color: #888888;
+  color: #888888;
 }
 
 .hl-blur {
-    filter: blur(2px);
+  filter: blur(2px);
 }
 
 .hl-strong {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .hl-em {
-    font-style: italic;
+  font-style: italic;
 }
 
 .hl-addition {
-    display: inline-block;
-    min-width: 100%;
-    background-color: #00FF0033;
+  display: inline-block;
+  min-width: 100%;
+  background-color: #00ff0033;
 }
 
 .hl-deletion {
-    display: inline-block;
-    min-width: 100%;
-    background-color: #FF000022;
+  display: inline-block;
+  min-width: 100%;
+  background-color: #ff000022;
 }
