--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto Mono", monospace;
+  font-family: "Outfit", monospace;
   width: 100%;
   background-color: #f9f9f9;
   overflow-x: hidden;
@@ -83,6 +83,11 @@ footer {
 }
 time {
   color: #666;
+}
+ul {
+  li {
+    padding: 0.125rem 0;
+  }
 }
 #app {
   min-height: 100vh;
