--- a/public/style.css
+++ b/public/style.css
@@ -41,7 +41,7 @@ a:hover {
 }
 
 code {
-  font-family: "Roboto mono", monospace;
+  font-family: "Dm Mono", "Roboto mono", monospace;
 }
 pre {
   code {
