--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  font-size: 16px;
+  font-size: 14px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -12,7 +12,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Outfit", monospace;
+  font-family: "Roboto Mono", monospace;
   width: 100%;
   background-color: #f9f9f9;
   overflow-x: hidden;
@@ -86,7 +86,7 @@ time {
 }
 ul {
   li {
-    padding: 0.125rem 0;
+    padding: 0.25rem 0;
   }
 }
 #app {
